hard coded gc params